fix: Flag env count, error 500 internal logging
